--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <li></li>
                             <li ng-mouseover="showMenu('project')"><div class="item">项目概况</div></li>
                         </ul>
-                        <img style="margin-right:17px" src="resources/imgs/menuitem">
+                        <img style="margin-right:17px" src="resources/imgs/menuitem.png">
                         </div>
                     </center>
                 </div>
@@ -44,7 +44,7 @@
                             <li></li>
                             <li ng-mouseover="showMenu('building')"><div class="item">建筑艺术</div></li>
                         </ul>
-                        <img style="margin-left:0px "src="resources/imgs/menuitem">
+                        <img style="margin-left:0px "src="resources/imgs/menuitem.png">
                     </div>
                 </div>
 
@@ -61,7 +61,7 @@
                                 <li></li>
                                 <li ng-mouseover="showMenu('business')"><div class="item">商务配套</div></li>
                             </ul>
-                            <img style="margin-left:0px" src="resources/imgs/menuitem">
+                            <img style="margin-left:0px" src="resources/imgs/menuitem.png">
                         </div>
                     </center>
                 </div>
@@ -76,7 +76,7 @@
                                 <li></li>
                                 <li ng-mouseover="showMenu('activity')"><div class="item">近期动向</div></li>
                         </ul>
-                        <img style="margin-left:-0px" src="resources/imgs/menuitem">
+                        <img style="margin-left:-0px" src="resources/imgs/menuitem.png">
                     </div>
                 </div>
                 <div class="col-xs-1 " style="margin-top:-20px">
@@ -87,7 +87,7 @@
                         <ul ng-show="!bookMenu" style="background-image:url();height:55px;" >
                                 <li ng-mouseover="showMenu('book')"><div class="item">租赁服务</div></li>
                         </ul>
-                        <img style="margin-left:-0px" src="resources/imgs/menuitem">
+                        <img style="margin-left:-0px" src="resources/imgs/menuitem.png">
                     </div>
                 </div>
 
@@ -100,7 +100,7 @@
                         <ul ng-show="!companyMenu" style="background-image:url();height:55px;" >
                                 <li ng-mouseover="showMenu('company')"><div class="item">合作单位</div></li>
                         </ul>
-                            <img style="margin-left:0px" src="resources/imgs/menuitem">
+                            <img style="margin-left:0px" src="resources/imgs/menuitem.png">
                         </div>
                     </center>
                 </div>
