--- a/resources/html/booking.html
+++ b/resources/html/booking.html
@@ -1,4 +1,41 @@
 <div class="blur-layer" ></div>
-<div class="project">
-    <h1>booking</h1>
-</div>
+<div class="project"></div>
+
+<center>
+    <div class="bookingpic_context">
+
+        <div class="booking_col_1">
+            <img src="resources/imgs/booking1.png">
+        </div>
+          
+        <div class="booking_col_2">
+        	<img src="resources/imgs/booking2.png">
+        </div>
+
+        <div class="booking_col_3">
+            <img src="resources/imgs/booking3.png">     
+        </div>
+
+    </div>
+
+    <div class="bookingtext_context">
+    	<h4>
+    		<img src="resources/imgs/text-icon.png">
+    		租赁咨询热线
+    		<img src="resources/imgs/text-icon.png"> 
+    	</h4>	 
+    </div>
+
+    <div class="bookingtel_context" style="z-index:8;">
+    	<h2>
+    		<img src="resources/imgs/arrow2-left.png">
+    		&nbsp6603&nbsp&nbsp9797&nbsp&nbsp&nbsp&nbsp6603&nbsp8787&nbsp
+    		<img src="resources/imgs/arrow2-right.png"> 
+    	</h2>	 
+    </div>
+
+</center>
+
+
+
+
