--- a/resources/html/project_con.html
+++ b/resources/html/project_con.html
@@ -5,7 +5,7 @@
         <div class=context>
             <div class="col-1">
                 <div class="text-left">
-                <h4 class="title-color"><img src="resources/imgs/text-icon">&nbsp;基本参数</h4>
+                <h4 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;基本参数</h4>
                 <img src="resources/imgs/arrow-left.png"><br/>
                 总建筑面积｜82,128m2<br/>
                 地上建筑面积｜约54,581m2<br/>
