--- a/resources/html/project_intro.html
+++ b/resources/html/project_intro.html
@@ -1,4 +1,33 @@
 <div class="blur-layer" ></div>
 <div class="project">
-    <h1>intro</h1>
 </div>
+<center>
+<div class="intro">
+    <div class="intro-left">
+        <div class="photo-eight" >
+            <div class="thumb">
+            <div class="row" style="margin-right:10px;" >
+                <div class="col-xs-3"><img ng-click="clickPhoto(1)" src="resources/imgs/1-2.png"></div>
+                <div class="col-xs-3"><img ng-click="clickPhoto(2)" src="resources/imgs/2-2.png"></div>
+                <div class="col-xs-3"><img ng-click="clickPhoto(3)" src="resources/imgs/3-2.png"></div>
+                <div class="col-xs-3"><img ng-click="clickPhoto(4)" src="resources/imgs/4-2.png"></div>
+            </div>
+            <div class="row" style="margin-top:30px;margin-right:10px;">
+                <div class="col-xs-3"><img ng-click="clickPhoto(5)" src="resources/imgs/5-2.png"></div>
+                <div class="col-xs-3"><img ng-click="clickPhoto(6)" src="resources/imgs/6-2.png"></div>
+                <div class="col-xs-3"><img ng-click="clickPhoto(7)" src="resources/imgs/7-2.png"></div>
+                <div class="col-xs-3"><img ng-click="clickPhoto(8)" src="resources/imgs/8-2.png"></div>
+            </div>
+            </div>
+        </div>
+        <div class="intro-text">
+            <h4 ><img src="resources/imgs/text-icon.png">&nbsp;{{textTitle}}</h4>
+            <p >{{textBody}}</p>
+        </div>
+    </div>
+
+    <div class="intro-right">
+        <img src="resources/imgs/{{imageName}}">
+    </div>
+</div>
+</center>
