--- a/resources/html/outer.html
+++ b/resources/html/outer.html
@@ -1,4 +1,28 @@
 <div class="blur-layer" ></div>
-<div class="project">
-    <h1>outer</h1>
-</div>
+<div class="project"></div>
+
+<center>
+    <div class="outer_context">
+
+        <div class="outer_col_1">
+        	<div class="outer_text">
+            	<h5 class="title-color" align="left"><img src="resources/imgs/text-icon.png">&nbsp;周边配套</h5>
+	            <p class="outer_text">
+						锦什坊街35号四通八达。25条公交线路穿梭而过，地铁2号线阜成门站步行约10分钟，距北京首都国际机场约32公里。交通便捷，商务无往不利。<br/>
+						下榻五星级酒店群。北京金融街威斯汀大酒店、金融街洲际酒店、丽思卡尔顿酒店，以全球一致的五星级配套及服务，服务来往锦什坊街35号的精英商务人士。<br/>
+						步入金融核心区。中国人民银行、银监会、保监会、证监会“一行三会”等中国最高金融决策和监管机构就在步行距离内。锦什坊街35号置身全球最富吸引力的投资目的地、资本集散地和国家级金融管理中心，把握世界金融先机。
+	            </p>
+            </div>
+        </div>
+          
+        <div class="outer_col_2">
+        	<img src="resources/imgs/split.png">
+        </div>
+
+        <div class="outer_col_3">
+            <img src="resources/imgs/outer_pic.png">     
+        </div>
+
+    </div>
+
+</center>
