--- a/resources/html/booking.html
+++ b/resources/html/booking.html
@@ -26,10 +26,10 @@
     	</h4>	 
     </div>
 
-    <div class="bookingtel_context" style="z-index:8;">
+    <div class="bookingtel_context" >
     	<h2>
     		<img src="resources/imgs/arrow2-left.png">
-    		&nbsp6603&nbsp&nbsp9797&nbsp&nbsp&nbsp&nbsp6603&nbsp8787&nbsp
+    		&nbsp;&nbsp;6603&nbsp;&nbsp;9797&nbsp;&nbsp;&nbsp;&nbsp;6603&nbsp;&nbsp;8787&nbsp;&nbsp;
     		<img src="resources/imgs/arrow2-right.png"> 
     	</h2>	 
     </div>
