finsih people page

--- a/resources/html/inner.html
+++ b/resources/html/inner.html
@@ -1,4 +1,21 @@
 <div class="blur-layer" ></div>
 <div class="project">
-    <h1>inner/h1>
 </div>
+<center>
+  <div class="intro">
+    <div class="intro-left">
+        <div class="face" >
+            <img src="resources/imgs/project-con.png">
+        </div>
+        <img class="split" src="resources/imgs/split.png" style="top:150px;">
+    </div>
+    <div class="intro-right" style="top:20px">
+        <img src="resources/imgs/describe.png">
+        <div class="inner">
+            <h4><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h4>
+            <br/>
+            <p>哈特曼-考克斯建筑事务所，位于美国华盛顿哥伦比亚特区。长期以来为政府机构，教育学院，以及公司团体提供世界顶尖级的建筑设计。其中，与周边公共环境的完美结合是该公司作品的一大特色，曾获美国古典学院的亚瑟罗斯大奖，以及美国建筑师学会年度公司奖。作品包括美国华盛顿城市广场，纽约曼哈顿帝国广场，还有杜克大学神学院。</p>
+        </div>
+    </div>
+  </div>
+</center>
