--- a/resources/html/project_intro.html
+++ b/resources/html/project_intro.html
@@ -20,6 +20,7 @@
             </div>
             </div>
         </div>
+        <img class="split" src="resources/imgs/split.png">
         <div class="intro-text">
             <h4 ><img src="resources/imgs/text-icon.png">&nbsp;{{textTitle}}</h4>
             <p >{{textBody}}</p>
