--- a/resources/html/activity.html
+++ b/resources/html/activity.html
@@ -1,4 +1,51 @@
 <div class="blur-layer" ></div>
 <div class="project">
-    <h1>act</h1>
 </div>
+
+<!-- <center>
+  <div class="intro">
+    <div class="intro-left">
+        <div class="face" >
+            <img src="resources/imgs/activity.png">
+        </div>
+        <img class="split" src="resources/imgs/split.png" style="top:150px;">
+    </div>
+    <div class="intro-right" style="top:20px">
+        <img src="resources/imgs/text-background.png">
+        <div class="describe">
+            <h4><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h4>
+            <br/>
+            <h4><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h4>
+            <br/>
+            <h4><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h4>
+            <br/>
+            <h4><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h4>
+            <br/>
+        </div>
+    </div>
+  </div>
+</center> -->
+
+<center>
+  <div class="intro">
+    <div class="intro-left">
+        <div class="face" >
+            <img src="resources/imgs/activity.png">
+        </div>
+        <img class="split" src="resources/imgs/split.png" style="top:170px;">
+    </div>
+    <div class="intro-right" style="top:30px">
+        <img src="resources/imgs/text-background.png">
+        <div class="inner">
+        	<h5><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h5>
+            <br/>
+            <h5><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h5>
+            <br/>
+            <h5><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h5>
+            <br/>
+            <h5><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h5>
+            <br/>
+        </div>
+    </div>
+  </div>
+</center>
