--- a/resources/html/inner.html
+++ b/resources/html/inner.html
@@ -7,14 +7,17 @@
         <div class="face" >
             <img src="resources/imgs/project-con.png">
         </div>
-        <img class="split" src="resources/imgs/split.png" style="top:150px;">
+        <img class="split" src="resources/imgs/split.png" style="top:170px;">
     </div>
-    <div class="intro-right" style="top:20px">
-        <img src="resources/imgs/describe.png">
+    <div class="intro-right" style="top:30px">
+        <img src="resources/imgs/text-background.png">
         <div class="inner">
-            <h4><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h4>
+            <h4 class="title-color" > <img  src="resources/imgs/text-icon.png">&nbsp;内部配套</h4>
+            <p >让忙碌的商务人士享受放松一刻的咖啡厅，服务自清晨到夜晚、汇聚中西美食的各式餐厅，为企业会议、新品发布、私人聚会提供理想场地的百变展厅，畅享全球经济服务的银行、理财中心，顶级客户尊享的VIP电梯厅、VIP停车空间，面包房、快递服务、洗衣店、英语培训等一站式商务消费，锦什坊街35号以五星级商务生活配套，礼遇跨国金融商务精。</p>
             <br/>
-            <p>哈特曼-考克斯建筑事务所，位于美国华盛顿哥伦比亚特区。长期以来为政府机构，教育学院，以及公司团体提供世界顶尖级的建筑设计。其中，与周边公共环境的完美结合是该公司作品的一大特色，曾获美国古典学院的亚瑟罗斯大奖，以及美国建筑师学会年度公司奖。作品包括美国华盛顿城市广场，纽约曼哈顿帝国广场，还有杜克大学神学院。</p>
+            <h4 class="title-color" ><img src="resources/imgs/text-icon.png">&nbsp;物业管理</h4>
+            <p >特邀仲量联行担当物业管理及租赁代理</p> 
+            <p >仲量联行是全球房地产专业服务行业中的翘楚，从成立以来至今有200多年历史，股票在美国纽约上市（JLL），其专业技术、经验和经济背景，是肩承重任的保证。仲量联行携全球200多年、华北区19年业务经验，为锦什坊街35号提供物业管理及租赁代理服务</p>
         </div>
     </div>
   </div>
