--- a/resources/html/building.html
+++ b/resources/html/building.html
@@ -1,4 +1,30 @@
 <div class="blur-layer" ></div>
 <div class="project">
-    <h1>building</h1>
 </div>
+<center>
+  <div class="intro">
+    <div class="intro-left">
+        <div class="number" >
+            <img src="resources/imgs/number.png">
+            <ul class="select-list">
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(1)"><span class="clicktext">美国制药协会 | 华盛顿</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(2)"><span class="clicktext">温库普1515 | 丹佛</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(3)"><span class="clicktext">九号大街505 | 华盛顿</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(4)"><span class="clicktext">林肯广场 | 华盛顿</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(5)"><span class="clicktext">博文大厦 | 华盛顿</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(6)"><span class="clicktext">华盛顿1875号 | K大街</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(7)"><span class="clicktext">北国会大厦街800 | 华盛顿</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(8)"><span class="clicktext">M大街1501 | 华盛顿</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(9)"><span class="clicktext">市集广场 | 华盛顿</span></li>
+                <li class="clickable" style="font-weight:bold" ng-click="clickBuilding(10)"><span class="clicktext">宾利法尼亚大道1001 | 华盛顿</span></li>
+            </ul>
+        </div>
+        <div class="split">
+            <img src="resources/imgs/split.png" style="margin-top:-280px;margin-left:-630px;">
+        </div>
+    </div>
+    <div class="intro-right" style="top:30px">
+        <img src="resources/imgs/{{buildingImgName}}">
+    </div>
+  </div>
+</center>
