--- a/resources/html/inner.html
+++ b/resources/html/inner.html
@@ -2,14 +2,16 @@
 <div class="project">
 </div>
 <center>
-  <div class="intro">
-    <div class="intro-left">
+  <div class="intro" style="width:1000px">
+    <div class="intro-left" style="width:100px">
         <div class="face" >
             <img src="resources/imgs/project-con.png">
         </div>
-        <img class="split" src="resources/imgs/split.png" style="top:170px;">
     </div>
-    <div class="intro-right" style="top:30px">
+    <div class="split" style="margin-left:260px">
+        <img src="resources/imgs/split.png" >
+    </div>
+    <div class="intro-right" sstyle="top:30px;">
         <img src="resources/imgs/text-background.png">
         <div class="inner">
             <h4 class="title-color" > <img  src="resources/imgs/text-icon.png">&nbsp;内部配套</h4>
