--- a/resources/html/project_intro.html
+++ b/resources/html/project_intro.html
@@ -7,26 +7,28 @@
         <div class="photo-eight" >
             <div class="thumb">
             <div class="row" style="margin-right:10px;" >
-                <div class="col-xs-3"><img ng-click="clickPhoto(1)" src="resources/imgs/1-2.png"></div>
-                <div class="col-xs-3"><img ng-click="clickPhoto(2)" src="resources/imgs/2-2.png"></div>
-                <div class="col-xs-3"><img ng-click="clickPhoto(3)" src="resources/imgs/3-2.png"></div>
-                <div class="col-xs-3"><img ng-click="clickPhoto(4)" src="resources/imgs/4-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(1)" src="resources/imgs/1-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(2)" src="resources/imgs/2-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(3)" src="resources/imgs/3-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(4)" src="resources/imgs/4-2.png"></div>
             </div>
             <div class="row" style="margin-top:30px;margin-right:10px;">
-                <div class="col-xs-3"><img ng-click="clickPhoto(5)" src="resources/imgs/5-2.png"></div>
-                <div class="col-xs-3"><img ng-click="clickPhoto(6)" src="resources/imgs/6-2.png"></div>
-                <div class="col-xs-3"><img ng-click="clickPhoto(7)" src="resources/imgs/7-2.png"></div>
-                <div class="col-xs-3"><img ng-click="clickPhoto(8)" src="resources/imgs/8-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(5)" src="resources/imgs/5-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(6)" src="resources/imgs/6-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(7)" src="resources/imgs/7-2.png"></div>
+                <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(8)" src="resources/imgs/8-2.png"></div>
             </div>
             </div>
         </div>
-        <img class="split" src="resources/imgs/split.png">
+        
         <div class="intro-text">
-            <h4 ><img src="resources/imgs/text-icon.png">&nbsp;{{textTitle}}</h4>
-            <p >{{textBody}}</p>
+            <h5 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;{{textTitle}}</h5>
+            <p class="intro-text">{{textBody}}</p>
         </div>
     </div>
-
+    <div class="split">
+        <img src="resources/imgs/split.png">
+    </div>
     <div class="intro-right">
         <img src="resources/imgs/{{imageName}}">
     </div>
