--- a/resources/html/people.html
+++ b/resources/html/people.html
@@ -7,7 +7,9 @@
         <div class="face" >
             <img src="resources/imgs/people.png">
         </div>
-        <img class="split" src="resources/imgs/split.png" style="top:150px;">
+    </div>
+    <div class="split">
+        <img  src="resources/imgs/split.png" style="top:150px;">
     </div>
     <div class="intro-right" style="top:20px">
         <img src="resources/imgs/describe.png">
