--- a/resources/html/project_con.html
+++ b/resources/html/project_con.html
@@ -4,7 +4,7 @@
     <center>
         <div class=context>
             <div class="col-1">
-                <div class="text-left">
+                <div class="text-left" style="font-size:12px;line-height:25px">
                 <h4 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;基本参数</h4>
                 <img src="resources/imgs/arrow-left.png"><br/>
                 总建筑面积｜82,128m2<br/>
@@ -22,7 +22,7 @@
             </div>
             <div class="col-2"><img src="resources/imgs/project-con.png"></div>
             <div class="col-3">
-                <div class="text-right">
+                <div class="text-right" style="font-size:12px;line-height:23px">
                 <h4>&nbsp;</h4>
                 <img src="resources/imgs/arrow-right.png"><br/>
                 1层｜配套商业<br/>
