--- a/resources/html/building.html
+++ b/resources/html/building.html
@@ -1,7 +1,7 @@
 <div class="blur-layer" ></div>
 <div class="project">
 </div>
-<center>
+<center style="position: absolute;top:50px;">
   <div class="intro">
     <div class="intro-left">
         <div class="number" >
@@ -20,11 +20,11 @@
             </ul>
         </div>
         <div class="split">
-            <img src="resources/imgs/split.png" style="margin-top:-280px;margin-left:-630px;">
+            <img src="resources/imgs/split.png" style="margin-top:-15px;margin-left:-800px;">
         </div>
     </div>
-    <div class="intro-right" style="top:30px">
-        <img src="resources/imgs/{{buildingImgName}}">
+    <div class="intro-right" style="top:45px">
+        <img id="imageShow" src="resources/imgs/{{buildingImgName}}">
     </div>
   </div>
 </center>
