--- a/resources/html/inner.html
+++ b/resources/html/inner.html
@@ -1,14 +1,14 @@
 <div class="blur-layer" ></div>
 <div class="project">
 </div>
-<center>
-  <div class="intro" style="width:1000px">
-    <div class="intro-left" style="width:100px">
+<center style="position:absolute;top:50px;">
+  <div class="intro" style="margin-left:-50px;">
+    <div class="intro-left" style="width:100px;margin-top:-7px;">
         <div class="face" >
             <img src="resources/imgs/project-con.png">
         </div>
     </div>
-    <div class="split" style="margin-left:260px">
+    <div class="split" style="margin-left:360px">
         <img src="resources/imgs/split.png" >
     </div>
     <div class="intro-right" sstyle="top:30px;">
