--- a/resources/html/people.html
+++ b/resources/html/people.html
@@ -1,7 +1,7 @@
 <div class="blur-layer" ></div>
 <div class="project">
 </div>
-<center>
+<center style="position:absolute; top:60px;">
   <div class="intro">
     <div class="intro-left">
         <div class="face" >
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="split">
-        <img  src="resources/imgs/split.png" style="top:150px;">
+        <img  src="resources/imgs/split.png" style="margin-top:-10px;">
     </div>
     <div class="intro-right" style="top:20px">
         <img src="resources/imgs/describe.png">
