--- a/resources/html/project_con.html
+++ b/resources/html/project_con.html
@@ -1,8 +1,8 @@
 <div class="blur-layer" ></div>
-<div class="project">
-</div>
-    <center>
-        <div class=context>
+<div class="project"></div>
+
+    <center  style="position: absolute;top:50px;">
+        <div class="context">
             <div class="col-1">
                 <div class="text-left" style="font-size:12px;line-height:25px">
                 <h4 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;基本参数</h4>
@@ -22,7 +22,7 @@
             </div>
             <div class="col-2"><img src="resources/imgs/project-con.png"></div>
             <div class="col-3">
-                <div class="text-right" style="font-size:12px;line-height:23px">
+                <div class="text-right" style="font-size:12px;line-height:23px;">
                 <h4>&nbsp;</h4>
                 <img src="resources/imgs/arrow-right.png"><br/>
                 1层｜配套商业<br/>
