--- a/resources/html/project_intro.html
+++ b/resources/html/project_intro.html
@@ -1,18 +1,18 @@
 <div class="blur-layer" ></div>
 <div class="project">
 </div>
-<center>
+<center style="position: absolute;top:50px;">
 <div class="intro">
     <div class="intro-left">
         <div class="photo-eight" >
             <div class="thumb">
-            <div class="row" style="margin-right:10px;" >
+            <div class="row" style="margin-right:10px;height:60px;" >
                 <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(1)" src="resources/imgs/1-2.png"></div>
                 <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(2)" src="resources/imgs/2-2.png"></div>
                 <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(3)" src="resources/imgs/3-2.png"></div>
                 <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(4)" src="resources/imgs/4-2.png"></div>
             </div>
-            <div class="row" style="margin-top:30px;margin-right:10px;">
+            <div class="row" style="margin-top:20px;margin-right:10px;">
                 <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(5)" src="resources/imgs/5-2.png"></div>
                 <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(6)" src="resources/imgs/6-2.png"></div>
                 <div class="col-xs-3"><img class="thumb-pic" ng-click="clickPhoto(7)" src="resources/imgs/7-2.png"></div>
@@ -21,16 +21,17 @@
             </div>
         </div>
         
-        <div class="intro-text">
+        <div id="textShow" class="intro-text">
             <h5 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;{{textTitle}}</h5>
-            <p class="intro-text">{{textBody}}</p>
+            <p  class="intro-text">{{textBody}}</p>
         </div>
     </div>
     <div class="split">
         <img src="resources/imgs/split.png">
     </div>
     <div class="intro-right">
-        <img src="resources/imgs/{{imageName}}">
+        <img id="imageShow" src="resources/imgs/{{imageName}}">
+         <!--<img ng-repeat = "slide in slides" class="element dn-fade" ng-class="{'dn-fade-up':dn_fade_up}" ng-show = "isCurrentSlideIndex($index)" ng-src = "{{slide.image}}" >-->
     </div>
 </div>
 </center>
