--- a/resources/html/activity.html
+++ b/resources/html/activity.html
@@ -3,23 +3,23 @@
 </div>
 
 
-<center>
-  <div class="intro">
-    <div class="intro-left" style="width:100px">
-        <div class="face" >
-            <img src="resources/imgs/activity.png">
+<center style="position:absolute;top:50px;">
+  <div class="intro" style="margin-left:-50px;">
+    <div class="intro-left" style="width:100px;margin-top:-7px;">
+        <div id="imageShow" class="face" >
+            <img  src="resources/imgs/{{picName}}">
         </div>
     </div>
-    <div class="split" style="margin-left:260px">
+    <div class="split" style="margin-left:360px">
         <img src="resources/imgs/split.png" >
     </div>
     <div class="intro-right" style="top:30px;">
         <img src="resources/imgs/text-background.png">
         <div class="inner" ng-show = "!showDetail">
         	<h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(1)">哈特曼·考克斯建筑设计师事务所</span></h5>
-            <h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(2)">活动内容</span></h5>
-            <h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(3)">活动内容</span></h5>
-            <h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(4)">活动内容</span></h5>
+            <h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(2)">锦什坊街叁拾伍号项目推介会</span></h5>
+            <!--<h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(3)">活动内容</span></h5>
+            <h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(4)">活动内容</span></h5>-->
         </div>
         <div class="inner" ng-show="showDetail">
             <center>
@@ -31,7 +31,9 @@
                     <img src="resources/imgs/33.png">
                 </div>
                 <div class="detailContent">
-                    <p>{{detailContent}}</p>
+                    <textarea style="height:200px;width:500px;background-color: transparent;border-style:none;margin-left:-50px;">
+                    {{detailContent}}
+                    </textarea>
                     <div class="back" style="">
                         <p ng-click="back()"><span class="clickable title-color">返回</span></p>
                     </div>
