--- a/resources/html/booking.html
+++ b/resources/html/booking.html
@@ -1,7 +1,7 @@
 <div class="blur-layer" ></div>
 <div class="project"></div>
 
-<center>
+<center style="position: absolute;top:50px; z-index:3;">
     <div class="bookingpic_context">
 
         <div class="booking_col_1">
