--- a/resources/html/company.html
+++ b/resources/html/company.html
@@ -1,7 +1,7 @@
 <div class="blur-layer" ></div>
 <div class="project">
 </div>    
-<center>
+<center style="position:absolute;top:50px;z-index:3;">
     <div class="company_context">
 
         <div class="company_col_1">
@@ -19,17 +19,17 @@
         </div>
           
         <div class="company_col_2">
-            <img src="resources/imgs/split.png">
+            <img id="imageShow" src="resources/imgs/split.png">
         </div>
 
         <div class="company_col_3">
             <div class="company_text">
-                <p >
+                <p id="textShow1">
                     {{companyContent}}
                 </p>
                 <div class="site">
-                <span style="font-size:15px;">官网地址：</span><span class="title-color">{{url1}}</span><br\>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="title-color">{{url2}}</span>
+                <span style="font-size:15px;">官网地址：</span><span id="textShow2" class="title-color">{{url1}}</span><br\>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="textShow3" class="title-color">{{url2}}</span>
                 </div>
             </div>
         </div>
