--- a/resources/html/outer.html
+++ b/resources/html/outer.html
@@ -1,7 +1,7 @@
 <div class="blur-layer" ></div>
 <div class="project"></div>
 
-<center>
+<center style="position: absolute;top:50px; z-index:3;">
     <div class="outer_context">
 
         <div class="outer_col_1">
