图片文字修改

--- a/resources/html/activity.html
+++ b/resources/html/activity.html
@@ -31,9 +31,11 @@
                     <img src="resources/imgs/33.png">
                 </div>
                 <div class="detailContent">
-                    <textarea style="height:200px;width:500px;background-color: transparent;border-style:none;margin-left:-50px;">
+
+                    <textarea disabled="disabled" style="height:200px;width:500px;background-color: transparent;border-style:none;margin-left:-50px;">
                     {{detailContent}}
                     </textarea>
+
                     <div class="back" style="">
                         <p ng-click="back()"><span class="clickable title-color">返回</span></p>
                     </div>
