--- a/resources/html/company.html
+++ b/resources/html/company.html
@@ -5,7 +5,9 @@
     <div class="company_context">
 
         <div class="company_col_1">
-            <img src="resources/imgs/company.png">
+
+            <img id="logoImageShow" src="resources/imgs/{{logoImgName}}">
+
             <div class="company_titles">
                 <h5 class="clickable" style="font-weight:bold;color:{{clicked}}" ng-click="clickCompany(1)"><img src="resources/imgs/text-icon.png">&nbsp;<span class="clicktext">金融街房地产顾问有限公司</span></h5>
                 <br/>
@@ -28,7 +30,7 @@
                     {{companyContent}}
                 </p>
                 <div class="site">
-                <span style="font-size:15px;">官网地址：</span><span id="textShow2" class="title-color">{{url1}}</span><br\>
+                <span style="font-size:15px;"></span><span id="textShow2" class="title-color">{{url1}}</span><br\>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="textShow3" class="title-color">{{url2}}</span>
                 </div>
             </div>
