--- a/resources/html/booking.html
+++ b/resources/html/booking.html
@@ -29,7 +29,7 @@
     <div class="bookingtel_context" >
     	<h2>
     		<img src="resources/imgs/arrow2-left.png">
-    		&nbsp;&nbsp;6603&nbsp;&nbsp;9797&nbsp;&nbsp;&nbsp;&nbsp;6603&nbsp;&nbsp;8787&nbsp;&nbsp;
+    		010-66039797&nbsp;&nbsp;&nbsp;&nbsp;010-66038787
     		<img src="resources/imgs/arrow2-right.png"> 
     	</h2>	 
     </div>
