--- a/resources/html/people.html
+++ b/resources/html/people.html
@@ -14,9 +14,9 @@
     <div class="intro-right" style="top:20px">
         <img src="resources/imgs/describe.png">
         <div class="describe">
-            <h4><img src="resources/imgs/text-icon.png">&nbsp;哈特曼·考克斯建筑设计师事务所</h4>
+            <h4><img src="resources/imgs/text-icon.png">&nbsp;设计师简介</h4>
             <br/>
-            <p>哈特曼-考克斯建筑事务所，位于美国华盛顿哥伦比亚特区。长期以来为政府机构，教育学院，以及公司团体提供世界顶尖级的建筑设计。其中，与周边公共环境的完美结合是该公司作品的一大特色，曾获美国古典学院的亚瑟罗斯大奖，以及美国建筑师学会年度公司奖。作品包括美国华盛顿城市广场，纽约曼哈顿帝国广场，还有杜克大学神学院。</p>
+            <p style="text-align:justify;text-justify:inter-ideograph;font-size:13px;text-indet:2em">D. Graham Davidson先生是哈特曼·考克斯建筑设计事务所主要合伙人之一，美国建筑协会会员，一直以来始终致力于为机构、学院、政府办公机关进行建筑设计、室内设计和整体规划。主要设计作品有Market Square、Lincoln Square、1200 K Street、Bowen Building等，以富有想象力的设计和负责的工作态度闻名于业界。</p>
         </div>
     </div>
   </div>
