--- a/resources/html/project_con.html
+++ b/resources/html/project_con.html
@@ -4,27 +4,27 @@
     <center  style="position: absolute;top:50px;">
         <div class="context">
             <div class="col-1">
-                <div class="text-left" style="font-size:12px;line-height:25px">
+                <div class="text-left" style="font-size:12px;line-height:25px;line-height:240%">
                 <h4 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;基本参数</h4>
                 <img src="resources/imgs/arrow-left.png"><br/>
-                总建筑面积｜82,128m2<br/>
-                地上建筑面积｜约54,581m2<br/>
-                地下建筑面积｜约27,547m2<br/>
-                标准层面积｜约5,000m2<br/>
+                总建筑面积｜82,336m&sup2<br/>
+                地上建筑面积｜约57,281m&sup2<br/>
+                地下建筑面积｜约25,055m&sup2<br/>
+                标准层面积｜≥5,000m&sup2<br/>
                 竣工日期｜2014年12月<br/>
                 LEED认证｜金级<br/>
                 楼体高度｜51.5m<br/>
                 楼层｜12层（电梯楼层）<br/>
                 停车位｜270个<br/>
                 办公区域使用率｜70%<br/>
-                标准层净高｜2.8m<br/>
                 </div>
             </div>
             <div class="col-2"><img src="resources/imgs/project-con.png"></div>
             <div class="col-3">
-                <div class="text-right" style="font-size:12px;line-height:23px;">
+                <div class="text-right" style="font-size:12px;line-height:23px;line-height:240%">
                 <h4>&nbsp;</h4>
                 <img src="resources/imgs/arrow-right.png"><br/>
+                标准层净高｜2.8m<br/>
                 1层｜配套商业<br/>
                 地下一层｜员工餐厅和其他商业<br/>
                 地下2层—4层｜设备及停车场<br/>
@@ -34,10 +34,10 @@
                 冷却｜24小时冷却水<br/>
                 网络地板｜15厘米<br/>
                 写字楼走廊宽度｜2米<br/>
-                标准层｜2—3层和6—11层<br/>
-                标准层净高｜2.80米<br/>
-                5层/12层净高｜3.50米<br/>
-                </div>
+                <!-- 标准层｜2—3层和6—11层<br/>
+ -->                <!-- 标准层净高｜2.80米<br/> -->
+                <!-- 5层/12层净高｜3.50米<br/>
+ -->                </div>
             </div>
         </div>
     </center>
