--- a/resources/html/project_intro.html
+++ b/resources/html/project_intro.html
@@ -21,9 +21,12 @@
             </div>
         </div>
         
-        <div id="textShow" class="intro-text">
+        <div style="margin-left:60">
             <h5 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;{{textTitle}}</h5>
-            <p  class="intro-text">{{textBody}}</p>
+        </div>
+
+        <div id="textShow" class="intro-text" >
+            <p  class="intro-text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{textBody}}</p>
         </div>
     </div>
     <div class="split">
