--- a/resources/html/activity.html
+++ b/resources/html/activity.html
@@ -16,7 +16,7 @@
     <div class="intro-right" style="top:30px;">
         <img src="resources/imgs/text-background.png">
         <div class="inner" ng-show = "!showDetail">
-        	<h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(1)">哈特曼·考克斯建筑设计师事务所</span></h5>
+        	<h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(1)">艺术与金融的一次碰撞</span></h5>
             <h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(2)">锦什坊街叁拾伍号项目推介会</span></h5>
             <!--<h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(3)">活动内容</span></h5>
             <h5><img src="resources/imgs/text-icon.png">&nbsp;<span class="clickable title-color" ng-click="clickActivity(4)">活动内容</span></h5>-->
@@ -30,10 +30,10 @@
                         </span>
                     <img src="resources/imgs/33.png">
                 </div>
-                <div class="detailContent">
+                <div class="detailContent" style="margin-top: -10px">
 
-                    <textarea disabled="disabled" style="height:200px;width:500px;background-color: transparent;border-style:none;margin-left:-50px;">
-                    {{detailContent}}
+                    <textarea disabled="disabled" style="height:200px;width:500px;background-color: transparent;border-style:none;margin-left:-50px;text-align:justify;text-justify:inter-ideograph">
+                        {{detailContent}}
                     </textarea>
 
                     <div class="back" style="">
