--- a/resources/html/project_con.html
+++ b/resources/html/project_con.html
@@ -8,8 +8,8 @@
                 <h4 class="title-color"><img src="resources/imgs/text-icon.png">&nbsp;基本参数</h4>
                 <img src="resources/imgs/arrow-left.png"><br/>
                 总建筑面积｜82,336m&sup2<br/>
-                地上建筑面积｜约57,281m&sup2<br/>
-                地下建筑面积｜约25,055m&sup2<br/>
+                地上建筑面积｜57,281m&sup2<br/>
+                地下建筑面积｜25,055m&sup2<br/>
                 标准层面积｜≥5,000m&sup2<br/>
                 竣工日期｜2014年12月<br/>
                 LEED认证｜金级<br/>
