--- a/resources/html/company.html
+++ b/resources/html/company.html
@@ -10,7 +10,7 @@
 
             <div class="company_titles">
                 <!-- <h6 class="clickable2" style="font-weight:bold">业主方：</h6> -->
-                <p class="clickable2" style="font-size:11px">业主方：</p>
+                <p class="clickable2" style="font-size:9px">业主方</p>
                 <!-- <h5 class="clickable" style="font-weight:bold" ng-click="clickCompany(1)"> -->
                 <!-- <h5 class="clickable" style="font-weight:bold">  -->
                 <h5 style="font-weight:bold;margin-top:-10px"> 
@@ -18,7 +18,7 @@
                 <!-- <img src="resources/imgs/text-icon.png">&nbsp;<span class="clicktext">北京国有资本经营管理中心</span></h5> -->
                 <img src="resources/imgs/text-icon.png">&nbsp;<span>北京国有资本经营管理中心</span></h5>
 
-                <p class="clickable2" style="font-size:11px">国外建筑设计所：</p>
+                <p class="clickable2" style="font-size:9px">国外建筑设计所</p>
                 <!-- <h6 class="clickable2" style="font-weight:bold">国外建筑设计所：</h6> -->
                 <!-- <h5 class="clickable" style="font-weight:bold" ng-click="clickCompany(2)"> -->
                 <!-- <h5 class="clickable" style="font-weight:bold">  -->
@@ -27,7 +27,7 @@
                 <img src="resources/imgs/text-icon.png">&nbsp;<span>哈特曼·考克斯建筑设计师事务所</span></h5>
                 <!-- <br/> -->
 
-                <p class="clickable2" style="font-size:11px">国内建筑设计所：</p>
+                <p class="clickable2" style="font-size:9px">国内建筑设计所</p>
                 <!-- <h6 class="clickable2" style="font-weight:bold">国内建筑设计所：</h6> -->
                 <!-- <h5 class="clickable" style="font-weight:bold" ng-click="clickCompany(3)"> -->
                 <!-- <h5 class="clickable" style="font-weight:bold">  -->
@@ -36,7 +36,7 @@
                 <img src="resources/imgs/text-icon.png">&nbsp;<span>北京建筑设计研究院</span></h5>
                 <!-- <br/> -->
 
-                <p class="clickable2" style="font-size:11px">开发商：</p>
+                <p class="clickable2" style="font-size:9px">开发商</p>
                 <!-- <h6 class="clickable2" style="font-weight:bold">开发商：</h6> -->
                 <!-- <h5 class="clickable" style="font-weight:bold;color:{{clicked}}" ng-click="clickCompany(4)"> -->
                 <!-- <h5 class="clickable" style="font-weight:bold">  -->
@@ -45,7 +45,7 @@
                 <img src="resources/imgs/text-icon.png">&nbsp;<span>北京金融街控股股份有限公司</span></h5>
                 <!-- <br/> -->
 
-                <p class="clickable2" style="font-size:11px">资产管理顾问：</p>
+                <p class="clickable2" style="font-size:9px">资产管理顾问</p>
                 <!-- <h6 class="clickable2" style="font-weight:bold">资产管理顾问：</h6> -->
                 <!-- <h5 class="clickable" style="font-weight:bold;color:{{clicked}}" ng-click="clickCompany(5)"> -->
                 <!-- <h5 class="clickable" style="font-weight:bold">  -->
@@ -54,7 +54,7 @@
                 <img src="resources/imgs/text-icon.png">&nbsp;<span>北京金融街房地产顾问有限公司</span></h5>
                 <!-- <br/> -->
                 
-                <p class="clickable2" style="font-size:11px">独家租赁代理及物业管理：</p>
+                <p class="clickable2" style="font-size:9px">独家租赁代理及物业管理</p>
                 <!-- <h6 class="clickable2" style="font-weight:bold">独家租赁代理及物业管理：</h6> -->
                 <!-- <h5 class="clickable" style="font-weight:bold" ng-click="clickCompany(6)"> -->
                 <!-- <h5 class="clickable" style="font-weight:bold">  -->
