关于我们文字修改

--- a/resources/html/company.html
+++ b/resources/html/company.html
@@ -74,8 +74,18 @@
 
         <div class="company_col_3">
             <div class="company_text">
-                <p id="textShow1">
-                    {{companyContent}}
+                <p id="textShow1" style="font-size:">
+                dreamsfount35th( 锦什坊街叁拾伍号) 网由北京国有资本经营管理中心管理运营。北京国有资本经营管理中心（简称“国管中心”）是北京市属国有独资大型投资控股公司，成立于2008年12月30日。截至2014年1月，资产总额14600亿元，累计投资总额近700亿元人民币。
+                </p>
+
+                <p id="textShow1" style="margin-top: -10px">
+                国管中心业务领域包括：制造与科技，消费与零售，能源与新材料，基础设施与地产，医疗与健康，金融服务等六大板块。既涵盖汽车、钢铁、装备制造、电子、医药、食品、建材、基础设施、房地产等传统实业，又包括银行、证券、私募基金、信用担保、财务公司等金融服务业。
+                </p>
+
+                <p id="textShow1" style="margin-top: -10px">
+                国管中心承担北京战略性产业项目投资，是以国有资本经营和国有股权管理为重点，以国有资本的证券化和价值最大化为目标的投融资主体。国管中心通过积极支持国企产业整合和改革重组，实现北京市委、市政府战略意图，推进首都金融产业布局，促进先导性产业发展和企业科技创新，在实施北京经济、社会发展战略和国际金融中心建设中发挥着国有大型企业集团的重要作用。
+                <p/>
+                    <!-- {{companyContent}} -->
                 </p>
                 <div class="site">
                 <span style="font-size:15px;"></span><span id="textShow2" class="title-color">{{url1}}</span><br\>
